--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lint": "eslint . --fix --cache"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
+    "jwt-decode": "^4.0.0",
+    "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.4"
   },
