--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.4",
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.5.25",
+    "vue-qrcode-reader": "^5.7.3",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
